--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="cta-buttons">
                 <a href="#contact" class="btn btn-primary">Hire Me</a>
                 <a href="#achievements" class="btn btn-secondary">Achievements</a>
-                <a href="file:///C:/Users/Harish/AppData/Local/Microsoft/Windows/INetCache/IE/DJBR150A/Blue%20Simple%20Professional%20CV%20Resume%20(4)[1].pdf" class="btn btn-outline" download>
+                <a href="Resume.pdf" class="btn btn-outline" download>
                     Download CV
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
                 </a>
